# key-value-store

./: README.md  haskell-stm-diskmap.cabal  key-value-store.cabal  stm-diskmap.cabal
src/Data/: DiskMap.hs
src/Data/DiskMap/: Types.hs
src/Data/DiskMap/Internal/: Helpers.hs  Types.hs  Update.hs
src/Data/DiskMap/Sync/: Sync.hs
