Name:                haskell-stm-diskmap
Version:             0.1.0
Synopsis:            An STM map with added disk sync (persistence)
Description:         TODO
License:             PublicDomain
Author:              Rune K. Svendsen
Maintainer:          runesvend@gmail.com
Stability:           Experimental
Homepage:            https://github.com/runeksvendsen/haskell-stm-diskmap
bug-reports:         https://github.com/runeksvendsen/haskell-stm-diskmap/issues
category:            Data, Containers, Persistence
Build-type:          Simple
Cabal-version:       >= 1.6

source-repository head
  type:     git
  location: https://github.com/runeksvendsen/haskell-stm-diskmap

Library
  exposed-modules:      Data.DiskMap
  ghc-options:          -W -O2

  build-depends:        base                      >= 4     && < 5,
                        bytestring,
                        base16-bytestring,
                        stm-containers,
                        binary,
                        hashable,
                        directory,
                        list-t,
                        stm,
                        exceptions,
                        spawn

  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:        Data.DiskMap.Internal.Helpers
                        Data.DiskMap.Internal.Update
                        Data.DiskMap.Sync.Deferred
                        Data.DiskMap.Sync.Sync
                        Data.DiskMap.Types


